; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ocd.c_ocd_error.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ocd.c_ocd_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gdb_stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c" \00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"Unknown fault\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"Power failed\00", align 1
@.str.3 = private unnamed_addr constant [19 x i8] c"Cable disconnected\00", align 1
@.str.4 = private unnamed_addr constant [24 x i8] c"Couldn't enter OCD mode\00", align 1
@.str.5 = private unnamed_addr constant [22 x i8] c"Target stuck in reset\00", align 1
@.str.6 = private unnamed_addr constant [28 x i8] c"OCD hasn't been initialized\00", align 1
@.str.7 = private unnamed_addr constant [20 x i8] c"Write verify failed\00", align 1
@.str.8 = private unnamed_addr constant [49 x i8] c"Reg buff error (during MPC5xx fp reg read/write)\00", align 1
@.str.9 = private unnamed_addr constant [43 x i8] c"Invalid CPU register access attempt failed\00", align 1
@.str.10 = private unnamed_addr constant [10 x i8] c"Bus error\00", align 1
@.str.11 = private unnamed_addr constant [15 x i8] c"Checksum error\00", align 1
@.str.12 = private unnamed_addr constant [16 x i8] c"Illegal command\00", align 1
@.str.13 = private unnamed_addr constant [16 x i8] c"Parameter error\00", align 1
@.str.14 = private unnamed_addr constant [15 x i8] c"Internal error\00", align 1
@.str.15 = private unnamed_addr constant [18 x i8] c"Flash erase error\00", align 1
@.str.16 = private unnamed_addr constant [22 x i8] c"Unknown error code %d\00", align 1
@.str.17 = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ocd_error(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [100 x i8], align 16
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @gdb_stderr, align 4
  %8 = call i32 @fputs_filtered(i8* %6, i32 %7)
  %9 = load i32, i32* @gdb_stderr, align 4
  %10 = call i32 @fputs_filtered(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load i32, i32* %4, align 4
  switch i32 %11, label %27 [
    i32 1, label %12
    i32 2, label %13
    i32 3, label %14
    i32 4, label %15
    i32 5, label %16
    i32 6, label %17
    i32 7, label %18
    i32 8, label %19
    i32 9, label %20
    i32 17, label %21
    i32 18, label %22
    i32 19, label %23
    i32 20, label %24
    i32 21, label %25
    i32 128, label %26
  ]

12:                                               ; preds = %2
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %32

13:                                               ; preds = %2
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  br label %32

14:                                               ; preds = %2
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  br label %32

15:                                               ; preds = %2
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.4, i64 0, i64 0), i8** %3, align 8
  br label %32

16:                                               ; preds = %2
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.5, i64 0, i64 0), i8** %3, align 8
  br label %32

17:                                               ; preds = %2
  store i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.6, i64 0, i64 0), i8** %3, align 8
  br label %32

18:                                               ; preds = %2
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.7, i64 0, i64 0), i8** %3, align 8
  br label %32

19:                                               ; preds = %2
  store i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.8, i64 0, i64 0), i8** %3, align 8
  br label %32

20:                                               ; preds = %2
  store i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.9, i64 0, i64 0), i8** %3, align 8
  br label %32

21:                                               ; preds = %2
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.10, i64 0, i64 0), i8** %3, align 8
  br label %32

22:                                               ; preds = %2
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.11, i64 0, i64 0), i8** %3, align 8
  br label %32

23:                                               ; preds = %2
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.12, i64 0, i64 0), i8** %3, align 8
  br label %32

24:                                               ; preds = %2
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.13, i64 0, i64 0), i8** %3, align 8
  br label %32

25:                                               ; preds = %2
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.14, i64 0, i64 0), i8** %3, align 8
  br label %32

26:                                               ; preds = %2
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.15, i64 0, i64 0), i8** %3, align 8
  br label %32

27:                                               ; preds = %2
  %28 = getelementptr inbounds [100 x i8], [100 x i8]* %5, i64 0, i64 0
  %29 = load i32, i32* %4, align 4
  %30 = call i32 @sprintf(i8* %28, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.16, i64 0, i64 0), i32 %29)
  %31 = getelementptr inbounds [100 x i8], [100 x i8]* %5, i64 0, i64 0
  store i8* %31, i8** %3, align 8
  br label %32

32:                                               ; preds = %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12
  %33 = load i8*, i8** %3, align 8
  %34 = call i32 @error(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.17, i64 0, i64 0), i8* %33)
  ret void
}

declare dso_local i32 @fputs_filtered(i8*, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @error(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
